--- a/app/src/main/res/layout/task_fragment.xml
+++ b/app/src/main/res/layout/task_fragment.xml
@@ -17,20 +17,15 @@
             android:textAlignment="center"
             android:background="@drawable/take_words_down"/>
 
-
-
-
-
-
         <ImageView
-            android:layout_width="wrap_content"
+            android:id="@+id/all_word_list"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/thisWordShow"
             android:layout_marginTop="30dp"
             android:background="@drawable/take_word_left"
-            android:layout_toStartOf="@+id/central"
-            android:layout_marginEnd="1dp"/>
-
+            android:layout_marginStart="70dp"
+            android:layout_marginEnd="70dp" />
 
 
         <ListView
@@ -38,25 +33,28 @@
             android:layout_width="160dp"
             android:layout_height="450dp"
             android:visibility="visible"
-            android:layout_marginTop="90dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginTop="95dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="50dp"
             android:layout_below="@+id/thisWordShow"
-            android:layout_toStartOf="@+id/central"
+            android:layout_alignStart="@+id/all_word_list"
+            android:layout_alignEnd="@+id/all_word_list"
             android:dividerHeight="0dp"
             android:divider="@android:color/transparent"
             android:textAlignment="center"
             android:textColor="@color/white"/>
+
         <ListView
             android:id="@+id/Thru_answer_2"
             android:layout_width="160dp"
             android:layout_height="450dp"
             android:visibility="visible"
-            android:layout_marginTop="90dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginTop="95dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="50dp"
             android:layout_below="@+id/thisWordShow"
-            android:layout_toStartOf="@+id/central"
+            android:layout_alignStart="@+id/all_word_list"
+            android:layout_alignEnd="@+id/all_word_list"
             android:dividerHeight="0dp"
             android:divider="@android:color/transparent"
             android:textAlignment="center"
@@ -66,11 +64,12 @@
             android:layout_width="160dp"
             android:layout_height="450dp"
             android:visibility="visible"
-            android:layout_marginTop="90dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginTop="95dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="50dp"
             android:layout_below="@+id/thisWordShow"
-            android:layout_toStartOf="@+id/central"
+            android:layout_alignStart="@+id/all_word_list"
+            android:layout_alignEnd="@+id/all_word_list"
             android:dividerHeight="0dp"
             android:divider="@android:color/transparent"
             android:textAlignment="center"
@@ -80,11 +79,12 @@
             android:layout_width="160dp"
             android:layout_height="450dp"
             android:visibility="visible"
-            android:layout_marginTop="90dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginTop="95dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="50dp"
             android:layout_below="@+id/thisWordShow"
-            android:layout_toStartOf="@+id/central"
+            android:layout_alignStart="@+id/all_word_list"
+            android:layout_alignEnd="@+id/all_word_list"
             android:dividerHeight="0dp"
             android:divider="@android:color/transparent"
             android:textAlignment="center"
@@ -99,38 +99,7 @@
             android:layout_centerVertical="true" />
 
 
-
-
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/thisWordShow"
-            android:layout_toEndOf="@+id/central"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/take_word_right"
-            android:layout_marginStart="1dp"/>
-
-        <ListView
-            android:id="@+id/Wrong_answer_1"
-            android:layout_width="160dp"
-            android:layout_height="450dp"
-            android:visibility="visible"
-            android:layout_marginTop="90dp"
-            android:layout_below="@+id/thisWordShow"
-            android:layout_toEndOf="@+id/central"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="10dp"
-            android:dividerHeight="0dp"
-            android:divider="@android:color/transparent"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            />
-
-
-
-
-    <Button
+        <Button
         android:id="@+id/butCloseTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -139,8 +108,7 @@
         android:layout_centerHorizontal="true"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:textAlignment="center"
-        android:text="Вернуться в игру"/>
+        android:textAlignment="center" />
 
 
 </RelativeLayout>
