--- a/app/src/main/res/xml/game_start_xml_colo_scene2.xml
+++ b/app/src/main/res/xml/game_start_xml_colo_scene2.xml
@@ -148,9 +148,9 @@
                 motion:percentY="0.2" />
             <KeyPosition
                 motion:motionTarget="@+id/pr10"
-                motion:framePosition="50"
+                motion:framePosition="60"
                 motion:keyPositionType="pathRelative"
-                motion:percentX="0.3"
+                motion:percentX="0.2"
                 motion:percentY="-0.17" />
             <KeyPosition
                 motion:motionTarget="@+id/pr11"
@@ -177,6 +177,12 @@
                 motion:keyPositionType="deltaRelative"
                 motion:percentX="0.4"
                 motion:percentY="0.06" />
+            <KeyPosition
+                motion:motionTarget="@+id/pr3"
+                motion:framePosition="20"
+                motion:keyPositionType="pathRelative"
+                motion:percentX="0.4"
+                motion:percentY="0.1" />
 
 
         </KeyFrameSet>
@@ -251,7 +257,7 @@
                 motion:framePosition="50"
                 motion:keyPositionType="pathRelative"
                 motion:percentX="0.5"
-                motion:percentY="0.3" />
+                motion:percentY="0.2" />
             <KeyPosition
                 motion:motionTarget="@+id/pr6"
                 motion:framePosition="30"
@@ -271,8 +277,8 @@
     <ConstraintSet android:id="@+id/start">
 
         <Constraint
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             android:id="@+id/pr1"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
@@ -283,8 +289,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr2"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -294,8 +300,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr3"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -305,8 +311,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr4"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -316,8 +322,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr5"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -327,8 +333,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr6"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -338,8 +344,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr7"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -349,8 +355,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr8"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -360,8 +366,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr9"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -371,8 +377,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr10"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -382,8 +388,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr11"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -393,8 +399,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr12"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -404,8 +410,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr13"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -415,8 +421,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr14"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -429,8 +435,8 @@
     <ConstraintSet android:id="@+id/end">
         <Constraint
             android:id="@+id/pr1"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
@@ -440,8 +446,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr2"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
@@ -451,8 +457,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr3"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -461,8 +467,8 @@
             motion:layout_constraintTop_toTopOf="parent" />
         <Constraint
             android:id="@+id/pr4"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -472,8 +478,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr5"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
@@ -483,8 +489,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr6"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
@@ -494,8 +500,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr7"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
@@ -505,8 +511,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr8"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
@@ -516,8 +522,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr9"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -527,8 +533,8 @@
             motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/pr10"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -538,8 +544,8 @@
             motion:layout_constraintHorizontal_bias="0.02" />
         <Constraint
             android:id="@+id/pr11"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -549,8 +555,8 @@
             motion:layout_constraintHorizontal_bias="0.264" />
         <Constraint
             android:id="@+id/pr12"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -560,8 +566,8 @@
             motion:layout_constraintHorizontal_bias="0.952" />
         <Constraint
             android:id="@+id/pr13"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -571,8 +577,8 @@
             motion:layout_constraintHorizontal_bias="0.02" />
         <Constraint
             android:id="@+id/pr14"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
